--- a/sass/_variables-mixins.scss
+++ b/sass/_variables-mixins.scss
@@ -1,8 +1,10 @@
 /* COLORES */
 
 $AzulDrean: #025bac;
+$AzulDreanOP: #025aac21;
 $GrisFuente: #53585e;
 $GrisGarantia: #e3e3e3;
+$GrisGarantiaOP: #e3e3e39e;
 $AzulGarantia: #002857;
 
 /* Redondeo Imagenes */
