--- a/sass/_index.scss
+++ b/sass/_index.scss
@@ -32,13 +32,32 @@
 
 .h1Main {
     grid-area: title;
-    font-size: 1.5rem;
+        font-size: 1.65rem;
 
-    @media(min-width:556px) {
+    @media(min-width:419px){
+        font-size: 1.8rem;     
+    }  
+    
+    @media(min-width:438px){
+        font-size: 1.9rem;     
+    }
+    
+    @media(min-width:458px){
+        font-size: 2rem;     
+    }
+
+    @media(min-width:477px){
+        font-size: 2.1rem;     
+    }
+
+    @media(min-width:498px){
+        font-size: 2.2rem;     
+    }
+
+    @media(min-width:556px){
         font-size: 2.5rem;
     }
 }
-
 .primeraSeccion__div {
     grid-area: lista;
     margin-left: 8%;
@@ -46,7 +65,7 @@
 
 .primeraSeccion__div__lista {
     font-family: 'Roboto', sans-serif;
-    font-size: 15px;
+    font-size: 1.05rem;
     align-self: center;
 
     li{
@@ -57,12 +76,25 @@
         padding-bottom: 2%;
     }
 
+
+    @media(min-width:350px) {
+        font-size: 1.2rem;
+    }
+
+    @media(min-width:350px) {
+        font-size: 1.2rem;
+    }
+
+    @media(min-width:380px) {
+        font-size: 1.3rem;
+    }
+
     @media(min-width:410px) {
-        font-size: 20px;
+        font-size: 1.4rem;
     }
 
     @media(min-width:500px) {    
-        font-size: 25px;
+        font-size: 1.5625rem;
     }
 
 
